--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,14 @@
 root = true
 
-[{*.html, *.css}]
+[*.html]
+indent_style = space
+indent_size = 2
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = false
+
+[*.css]
 indent_style = space
 indent_size = 2
 end_of_line = lf
